# Stage

./: .gitignore  CMakeLists.txt  config.h.in  run.sh  run_2d.sh  run_swarm.sh  run_voronoi.sh  voronoi.py
examples/ctrl/: CMakeLists.txt  eae_simple.cc  idle.cc
examples/ctrl/astar/: findpath.cpp
examples/ctrl/eae/: eae.cc  eae.hh  eae_coordination.cc  eae_coordination.hh  eae_ds.cc  eae_ds.hh  eae_graph.cc  eae_graph.hh  eae_gridmap.cc  eae_gridmap.hh  eae_logoutput.cc  eae_logoutput.hh  eae_robot.cc  eae_robot.hh  eae_simple.cc  eae_wifimessage.cc  eae_wifimessage.hh
examples/ctrl/eae_frevo_simple/: eae_frevo_simple.cc  eae_frevo_simple.hh  eae_frevo_simple_gridmap.cc  eae_frevo_simple_gridmap.hh  eae_frevo_simple_logoutput.cc  eae_frevo_simple_logoutput.hh  eae_frevo_simple_robot.cc  eae_frevo_simple_robot.hh
examples/ctrl/frevo/: frevo.cc  frevo.hh  frevo_gridmap.cc  frevo_gridmap.hh  frevo_logoutput.cc  frevo_logoutput.hh  frevo_robot.cc  frevo_robot.hh
examples/ctrl/swarm/: candidate.c  swarm.cc  swarm.hh  swarm_coordination.cc  swarm_coordination.hh  swarm_ds.cc  swarm_ds.hh  swarm_graph.cc  swarm_graph.hh  swarm_gridmap.cc  swarm_gridmap.hh  swarm_logoutput.cc  swarm_logoutput.hh  swarm_robot.cc  swarm_robot.hh  swarm_wifimessage.cc  swarm_wifimessage.hh
libstage/: CMakeLists.txt  blockgroup.cc  model.cc  model_position.cc  model_wifi.cc  stage.hh  typetable.cc  world.cc  worldfile.cc
worlds/: eae.inc  eae_2_1.world  eae_2_1_greedy.world  eae_2_1_market.world  eae_2_5_market_lines.world  eae_3_1.world  eae_3_1_greedy.world  eae_3_1_market.world  (+36 more)
